# python-x256-offline

./: .gitignore  README.md  README.rst  pyproject.toml  test.py  test.sh  test2.py
src/x256offline/: __init__.py  x256.py
